/**
 * 版本兼容测试
 * Comp: compatible
 */

// 生成 java 命令：[ protoc --java_out=./src/main/java/ ./proto/VersionCompMsg.proto ]

// [开始声明]
syntax = "proto3";
// package test.simple;  // 定义 protobuf 的包名称空间 (可不定义)
// [结束声明]


// [开始 java 选项配置]
option java_package = "test.simple";
option java_outer_classname = "VersionCompMsg"; // 建议 Java 以 Proto 结尾，如 XxMsgProto
// [结束 java 选项配置]


// [开始 消息定义]
message CompMsg { // 不要与上面的 java_outer_classname 一致
  uint32 id = 1;
  string name = 2;

  optional string str03 = 3;
  optional string str04 = 4;
  optional string str05 = 5;
  optional string str06 = 6;
  optional string str07 = 7;
  optional string str08 = 8;
  optional string str09 = 9;

  optional string str99 = 99;
}
// [结束 消息定义]